[metadata]
name = pf9-neutron-debug
author = Platform9 Systems, Inc
author-email = dev@platform9.com
home-page = https://github.com/platform9/pf9-neutron-debug
keywords=
        neutron
        neutron-debug
classifiers=
        Development Status :: 1 - Alpha
        Topic :: Utilities
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python

[files]
packages = 
    debug

[entry_points]
console_scripts = 
    neutron-debug-du = debug.du_debug.du_debug:main
    neutron-debug-host = debug.host_debug.host_debug:main
